--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <!-- Project 1 -->
       <div class="col-md-4">
         <div class="card shadow-sm h-100">
-          <img src="images/dogyears.png" class="card-img-top" alt="Dog Years Project">
+          <img src="img/dogyears.png" class="card-img-top" alt="Dog Years Project">
           <div class="card-body">
             <h5 class="card-title">Dog Years</h5>
             <p class="card-text">A full-stack event management site for MIS419 Server-Sided web programming course.</p>
@@ -46,7 +46,7 @@
       <!-- Project 2 -->
       <div class="col-md-4">
         <div class="card shadow-sm h-100">
-          <img src="images/surgicaldatabase.png" class="card-img-top" alt="SQL Project">
+          <img src="img/surgicaldatabase.png" class="card-img-top" alt="SQL Project">
           <div class="card-body">
             <h5 class="card-title">SQL Database System</h5>
             <p class="card-text">Normalized relational database design with PL/SQL procedures.</p>
@@ -58,7 +58,7 @@
       <!-- Project 3 -->
       <div class="col-md-4">
         <div class="card shadow-sm h-100">
-          <img src="images/gamecall.jpg" class="card-img-top" alt="Game Calls">
+          <img src="img/gamecall.jpg" class="card-img-top" alt="Game Calls">
           <div class="card-body">
             <h5 class="card-title">Game Calls</h5>
             <p class="card-text">Custom-built apps using Flask and frontend frameworks.</p>
