--- a/index.html
+++ b/index.html
@@ -18,6 +18,25 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="#about">About Me</a></li>
+          <li class="nav-item"><a class="nav-link" href="socials.html">Socials</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact Me</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Main Gallery Section -->
+<body>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand fw-bold" href="index.html">Jacob Benson</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="about.html">About Me</a></li>
           <li class="nav-item"><a class="nav-link" href="socials.html">Socials</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact Me</a></li>
@@ -27,49 +46,58 @@
   </nav>
 
   <!-- Main Gallery Section -->
- <section class="py-5 bg-light">
-  <div class="container">
-    <h2 class="text-center mb-4">My Projects</h2>
-    <div class="row g-4">
-      <!-- Project 1 -->
-      <div class="col-md-4">
-        <div class="card shadow-sm h-100">
-          <img src="img/dogyears.png" class="card-img-top" alt="Dog Years Project">
-          <div class="card-body">
-            <h5 class="card-title">Dog Years</h5>
-            <p class="card-text">A full-stack event management site for MIS419 Server-Sided web programming course.</p>
-            <a href="https://jbmis419.com/dog_years/" class="btn btn-outline-primary" target="_blank">View Live</a>
+  <section class="py-5 bg-light">
+    <div class="container">
+      <h2 class="text-center mb-5">My Projects</h2>
+      <div class="row g-4">
+        <!-- Project 1 -->
+        <div class="col-md-4">
+          <div class="card shadow-sm h-100">
+            <img src="img/dogyears.png" class="card-img-top" alt="Dog Years Project">
+            <div class="card-body">
+              <h5 class="card-title">Dog Years</h5>
+              <p class="card-text">A full-stack event management site for MIS419 Server-Sided web programming course.</p>
+              <a href="https://jbmis419.com/dog_years/" class="btn btn-outline-primary mt-2" target="_blank">View Live</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Project 2 -->
+        <div class="col-md-4">
+          <div class="card shadow-sm h-100">
+            <img src="img/surgicaldatabase.png" class="card-img-top" alt="SQL Project">
+            <div class="card-body">
+              <h5 class="card-title">SQL Database System</h5>
+              <p class="card-text">Normalized relational database design with PL/SQL procedures.</p>
+              <a href="https://github.com/yourusername/sql-database-project" class="btn btn-outline-primary mt-2" target="_blank">View Repo</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Project 3 -->
+        <div class="col-md-4">
+          <div class="card shadow-sm h-100">
+            <img src="img/gamecall.jpg" class="card-img-top" alt="Game Calls Project">
+            <div class="card-body">
+              <h5 class="card-title">Game Calls</h5>
+              <p class="card-text">Custom-built apps using Flask and frontend frameworks.</p>
+              <a href="https://github.com/yourusername/gamecalls" class="btn btn-outline-primary mt-2" target="_blank">View App</a>
+            </div>
           </div>
         </div>
       </div>
-
-      <!-- Project 2 -->
-      <div class="col-md-4">
-        <div class="card shadow-sm h-100">
-          <img src="img/surgicaldatabase.png" class="card-img-top" alt="SQL Project">
-          <div class="card-body">
-            <h5 class="card-title">SQL Database System</h5>
-            <p class="card-text">Normalized relational database design with PL/SQL procedures.</p>
-            <a href="https://github.com/jacobbenson96/PL-SQL_Project.git" class="btn btn-outline-primary" target="_blank">View Repo</a>
-          </div>
-        </div>  
-      </div>
-
-      <!-- Project 3 -->
-      <div class="col-md-4">
-        <div class="card shadow-sm h-100">
-          <img src="img/gamecall.jpg" class="card-img-top" alt="Game Calls">
-          <div class="card-body">
-            <h5 class="card-title">Game Calls</h5>
-            <p class="card-text">Custom-built apps using Flask and frontend frameworks.</p>
-            <a href="https://hunting-calls-app.onrender.com" class="btn btn-outline-primary" target="_blank">View App</a>
-          </div>
-        </div>
-      </div>
-
     </div>
-  </div>
-</section>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-dark text-white text-center py-4 mt-5">
+    <p class="mb-0">&copy; 2025 Jacob Benson. All rights reserved.</p>
+  </footer>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
   <!-- Footer -->
   <footer class="bg-dark text-white text-center py-3">
     <p class="mb-0">&copy; 2025 Jacob Benson. All rights reserved.</p>
