--- a/about.html
+++ b/about.html
@@ -34,10 +34,14 @@
   <!-- About Section -->
   <section class="py-5">
     <div class="container">
-      <h1 class="mb-4">About Me</h1>
-      <p>Hello! I'm Jacob Benson, a passionate and driven developer with a focus in web applications, databases, and technical systems. I enjoy building clean, user-friendly interfaces and full-stack solutions.</p>
-      <p>I’ve worked on a range of projects including a full-featured event management app ("Dog Years"), a surgical database system, and personal web utilities.</p>
-      <p>Outside of coding, I enjoy the outdoors, design work, and exploring new tech stacks.</p>
+      <h1 class="mb-4">My Resume</h1>
+  <!-- Resume Embed Section -->
+<div class="container mt-5">
+  <h2 class="mb-3">My Resume</h2>
+  <iframe src="files/resume_25" width="100%" height="800px" style="border: none;">
+    Your browser does not support PDFs. <a href="files/Jacob Benson Resume.25.pdf">Download it here.</a>
+  </iframe>
+</div>
     </div>
   </section>
 
