--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
   <!-- Resume Embed Section -->
 <div class="container mt-5">
   <h2 class="mb-3">My Resume</h2>
-  <iframe src="files/resume_25" width="100%" height="800px" style="border: none;">
+  <iframe src="resume_25" width="100%" height="800px" style="border: none;">
     Your browser does not support PDFs. <a href="files/Jacob Benson Resume.25.pdf">Download it here.</a>
   </iframe>
 </div>
