--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
 <div class="container mt-5">
   <h2 class="mb-3">My Resume</h2>
   <iframe src="resume_25" width="100%" height="800px" style="border: none;">
-    Your browser does not support PDFs. <a href="files/Jacob Benson Resume.25.pdf">Download it here.</a>
+    Your browser does not support PDFs. <a href="resume_25.pdf">Download it here.</a>
   </iframe>
 </div>
     </div>
