--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="about.htmml">About Me</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About Me</a></li>
           <li class="nav-item"><a class="nav-link" href="socials.html">Socials</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact Me</a></li>
         </ul>
