--- a/contact.html
+++ b/contact.html
@@ -54,9 +54,12 @@
             </div>
 
             <div class="mb-3">
-              <label class="form-label">Message</label>
-              <textarea name="message" rows="5" class="form-control" required></textarea>
+              <label for="message" class="form-label">Message</label>
+                <div class="form-control bg-light text-danger" style="height: 150px;">
+                    Do Not Submit, Contact Form Not Active Yet
+                </div>
             </div>
+
 
             <div class="d-grid">
               <button type="submit" class="btn btn-primary">Send Message</button>
