--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="card-body">
               <h5 class="card-title">SQL Database System</h5>
               <p class="card-text">Normalized relational database design with PL/SQL procedures.</p>
-              <a href="https://github.com/yourusername/sql-database-project" class="btn btn-outline-primary mt-2" target="_blank">View Repo</a>
+              <a href="https://github.com/jacobbenson96/PL-SQL_Project" class="btn btn-outline-primary mt-2" target="_blank">View Repo</a>
             </div>
           </div>
         </div>
@@ -61,7 +61,7 @@
             <div class="card-body">
               <h5 class="card-title">Game Calls</h5>
               <p class="card-text">Custom-built apps using Flask and frontend frameworks.</p>
-              <a href="https://github.com/yourusername/gamecalls" class="btn btn-outline-primary mt-2" target="_blank">View App</a>
+              <a href="https://hunting-calls-app.onrender.com" class="btn btn-outline-primary mt-2" target="_blank">View App</a>
             </div>
           </div>
         </div>
