--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
     <div id="statusAlert"></div>
 
       <h2 class="text-center mb-4">Let's Get in Touch</h2>
-      <p class="text-center text-muted mb-5">Feel free to reach out for collaboration, questions, or just to say hi.</p>
+      <p class="text-center text-muted mb-5">Feel free to reach out!</p>
 
       <div class="row justify-content-center">
         <div class="col-md-8">
